--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
       {
           "matches": ["*://*/*"],
           "js": ["js/content-script.js"],
-          "run_at": "document_start"
+          "run_at": "document_idle"
       }
   ],
   "web_accessible_resources": ["js/injector.js"],
